--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "removeComments": false,
-    "jsx": "react-jsx"
+    "jsx": "react"
   }
 }
