--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "react-highlight-keywords",
   "version": "0.0.1",
   "description": "",
-  "main": "./dist/index.js",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
-  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
+  "type": "module",
   "keywords": [],
   "files": [
     "dist"
@@ -20,9 +17,9 @@
   "homepage": "",
   "bugs": "",
   "scripts": {
-    "build": "rimraf dist dist && npm run build:types && npm run build:js && cp ./src/index.css dist/index.css",
+    "build": "rm -rf dist && rollup -c",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir dist --extensions \".tsx\"",
+    "build:js": "babel src --out-dir dist --extensions \".tsx\" --config-file ./.babelrc",
     "start": "webpack-dev-server --config ./example/webpack.config.js --mode development --open --hot",
     "test": "c8 ava",
     "prepublishOnly": "npm run build",
@@ -35,11 +32,15 @@
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
+    "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-url": "^8.0.1",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
+    "autoprefixer": "^10.4.14",
     "ava": "^5.2.0",
     "babel-loader": "^9.1.2",
     "c8": "^7.13.0",
@@ -48,9 +49,19 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss-import": "^15.1.0",
+    "postcss-url": "^10.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^4.4.1",
+    "rollup": "^3.20.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "rome": "12.0.0",
     "standard-version": "^9.5.0",
     "style-loader": "^3.3.2",
