--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "type": "module",
-  "keywords": [],
+  "keywords": [
+    "react",
+    "highlight",
+    "highlight-key",
+    "highlight-words"
+  ],
   "files": [
     "dist"
   ],
   "repository": {
-    "type": "",
-    "url": ""
+    "type": "git",
+    "url": "git+https://github.com/BlackBerry009/react-highlight-keywords"
   },
-  "homepage": "",
-  "bugs": "",
+  "homepage": "https://github.com/BlackBerry009/react-highlight-keywords",
+  "bugs": "https://github.com/BlackBerry009/react-highlight-keywords/issue",
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "build:types": "tsc --emitDeclarationOnly",
@@ -40,37 +45,21 @@
     "@rollup/plugin-url": "^8.0.1",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
-    "autoprefixer": "^10.4.14",
     "ava": "^5.2.0",
-    "babel-loader": "^9.1.2",
     "c8": "^7.13.0",
-    "css-loader": "^6.7.3",
     "git-cz": "^4.9.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "postcss-import": "^15.1.0",
-    "postcss-url": "^10.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^4.4.1",
     "rollup": "^3.20.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "rome": "12.0.0",
     "standard-version": "^9.5.0",
-    "style-loader": "^3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.77.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2"
+    "typescript": "^5.0.2"
   },
   "c8": {
     "reporter": [
@@ -90,7 +79,7 @@
       "test/**/*.ts"
     ]
   },
-  "author": "",
+  "author": "BlackBerry",
   "license": "ISC",
   "peerDependencies": {
     "react": "^18.2.0"
